--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 			</plugin>
 			<plugin>
 				<groupId>com.github.github</groupId>
-				<artifactId>site.maven-plugin</artifactId>
+				<artifactId>site-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
