--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,29 +1,30 @@
-name: Spring Boot CI/CD with Maven
+name: Build & Run Spring Boot
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-test:
+  build-and-run:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Java
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17' # Or your desired Java version
           distribution: 'temurin'
+          java-version: '17'
+
       - name: Build with Maven
-        run: mvn clean install -DskipTests
-      - name: Run Tests
-        run: mvn test
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: spring-boot-app
-          path: target/*.jar
+        run:  mvn clean package -DskipTests
+
+      - name: List JAR files
+        run: ls -la target/
+
+      - name: Run Spring Boot app (with log capture)
+        run: |
+          java -jar target/*.jar || true
